--- a/views/edit.pug
+++ b/views/edit.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h3 予定の編集
-  form(action=`/schedules/${schedule.scheduleId}?edit=1`, method="post")
+  form(method="post", action=`/schedules/${schedule.scheduleId}?edit=1`)
     div
       h5 予定名
       input(type="text" name="scheduleName" value=schedule.scheduleName)
@@ -14,7 +14,10 @@ block content
       ul
         each candidate in candidates
           li #{candidate.candidateName}
-      p 候補日程の追加（改行して複数入力してください）
+      p 候補日程の追加 (改行して複数入力してください)
       textarea(name="candidates")
     div
       button(type="submit") 以上の内容で予定を編集する
+  h3 危険な変更
+  form(method="post", action=`/schedules/${schedule.scheduleId}?delete=1`)
+    button(type="submit") この予定を削除する
